--- a/TODO
+++ b/TODO
@@ -1,12 +1,12 @@
 Version 0.0.4:
-- [] UI/UX improvements (more releastic button press)
-- [] Implement remaining events: [] GameChangedEvent (when a player joined any game) [] PlayerLeftGame [] PlayerJoinedGame
-- [] Real titles for the games.
+- [X] UI/UX improvements (more releastic button press)
+- [X] Implement remaining events: [] GameChangedEvent (when a player joined any game) [] PlayerLeftGame [] PlayerJoinedGame
+- [X] Real titles for the games. | Moving to backend
 - [] More responsive UI
-- [] Controls for refreshing the game list
+- [X] Controls for refreshing the game list
 - [] Create game page
-- [] Dockerfile
+- [X] Dockerfile
 
 Version 0.0.5:
 - [] Use the data fetched from server for the current game tab
-- [] Dynamic password known by the server
+- [] Check if password is required, information fetched from server.
