--- a/TODO
+++ b/TODO
@@ -2,9 +2,9 @@ Version 0.0.4:
 - [X] UI/UX improvements (more releastic button press)
 - [X] Implement remaining events: [] GameChangedEvent (when a player joined any game) [] PlayerLeftGame [] PlayerJoinedGame
 - [X] Real titles for the games. | Moving to backend
-- [] More responsive UI
+- [X] More responsive UI
 - [X] Controls for refreshing the game list
-- [] Create game page
+- [X] Create game page | Waiting for fix. Only finishable with JSON-Commands.
 - [X] Dockerfile
 
 Version 0.0.5:
